--- a/sensora-ui/src/assets/index.css
+++ b/sensora-ui/src/assets/index.css
@@ -4,7 +4,7 @@
 
 @layer base {
     :root {
-        --background: 0 0% 100%;
+        --background: #ffa500; /*0 0% 100%;*/
         --foreground: 222.2 84% 4.9%;
 
         --muted: 210 40% 96.1%;
@@ -22,7 +22,7 @@
         --primary: 222.2 47.4% 11.2%;
         --primary-foreground: 210 40% 98%;
 
-        --secondary: 210 40% 96.1%;
+        --secondary: var(--onyx-color-base-primary-500); /*210 40% 96.1%;*/
         --secondary-foreground: 222.2 47.4% 11.2%;
 
         --accent: 210 40% 96.1%;
@@ -36,21 +36,22 @@
         --radius: 0.5rem;
 
         /* Chart Colors */
-        --vis-tooltip-background-color: none !important;
-        --vis-tooltip-border-color: none !important;
-        --vis-tooltip-text-color: none !important;
-        --vis-tooltip-shadow-color: none !important;
-        --vis-tooltip-backdrop-filter: none !important;
-        --vis-tooltip-padding: none !important;
+        --vis-tooltip-background-color: #ffa500 /*none */ !important;
+        --vis-tooltip-border-color: #ffa500 /*none */ !important;
+        --vis-tooltip-text-color: #ffa500 /*none */ !important;
+        --vis-tooltip-shadow-color: #ffa500 /*none */ !important;
+        --vis-tooltip-backdrop-filter: #ffa500 /*none */ !important;
+        --vis-tooltip-padding: #ffa500 /*none */ !important;
 
         --vis-primary-color: var(--primary);
         /* change to any hsl value you want */
-        --vis-secondary-color: 160 81% 40%;
-        --vis-text-color: var(--muted-foreground);
+        /* second color of diagram*/
+        --vis-secondary-color: hsl(orange); /*210 81% 40%;*/
+        --vis-text-color: #ffa500; /*var(--muted-foreground);*/
     }
 
     .dark {
-        --background: 222.2 84% 4.9%;
+        --background: #ffa500; /*222.2 84% 4.9%;*/
         --foreground: 210 40% 98%;
 
         --muted: 217.2 32.6% 17.5%;
@@ -65,10 +66,10 @@
         --border: 217.2 32.6% 17.5%;
         --input: 217.2 32.6% 17.5%;
 
-        --primary: 210 40% 98%;
+        --primary: #ffa500; /*210 40% 98%;*/
         --primary-foreground: 222.2 47.4% 11.2%;
 
-        --secondary: 217.2 32.6% 17.5%;
+        --secondary: #ffa500; /*217.2 32.6% 17.5%;*/
         --secondary-foreground: 210 40% 98%;
 
         --accent: 217.2 32.6% 17.5%;
