--- a/sensora-ui/src/assets/main.css
+++ b/sensora-ui/src/assets/main.css
@@ -1,3 +1,13 @@
+main {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+}
+
+html::-webkit-scrollbar {
+    display: none;
+}
+
+
 /*@import './base.css';
 
 #app {
