--- a/sensora-ui/src/assets/index.css
+++ b/sensora-ui/src/assets/index.css
@@ -4,41 +4,41 @@
 
 @layer base {
     :root {
-        --background: 210 40% 98%; /*0 0% 100%;*/
-        --foreground: 222.2 84% 4.9%;
+        --background: 210 40% 98%; /* Sehr helles Blau */
+        --foreground: 222 30% 10%; /* Dunkles Grau */
 
         --muted: 210 40% 96.1%;
         --muted-foreground: 215.4 16.3% 46.9%;
 
-        --popover: 240 4.8% 95.9%; /*0 0% 100%;*/
-        --popover-foreground: 222.2 84% 4.9%;
+        --popover: 210 50% 96%; /* Hellblau */
+        --popover-foreground: 222 30% 10%; /* Dunkles Blau */
 
-        --card: 0 0% 100%;
-        --card-foreground: 222.2 84% 4.9%;
+        --card: 0 0% 100%; /* Weiß */
+        --card-foreground: 222 30% 10%; /* Dunkles Grau */
 
-        --border: 214.3 31.8% 91.4%;
-        --input: 214.3 31.8% 91.4%;
+        --border: 214.3 31.8% 91.4%; /* Sanftes Grau */
+        --input: 214.3 31.8% 91.4%; /* Sehr helles Grau */
 
-        --primary: 146, 72%, 36%; /*222.2 47.4% 11.2%;*/
-        --primary-foreground: 210 40% 98%;
+        --primary: 149, 45%, 42%;
+        --primary-foreground: 210 40% 98%; /* Weiß */
 
-        --secondary: 210 40% 96.1%;
-        --secondary-foreground: 222.2 47.4% 11.2%;
+        --secondary: 28, 85%, 73%; /*Orange */
+        --secondary-foreground: 210 40% 98%; /* Weiß */
 
-        --accent: 210 40% 96.1%;
-        --accent-foreground: 222.2 47.4% 11.2%;
+        --accent: 149, 43%, 47%;
+        --accent-foreground: 210 40% 98%; /* Weiß */
 
-        --destructive: 0 84.2% 60.2%;
-        --destructive-foreground: 210 40% 98%;
+        --destructive: 15 70% 60%; /* Rotes Orange */
+        --destructive-foreground: 210 40% 98%; /* Weiß */
 
-        --ring: 222.2 84% 4.9%;
+        --ring: 222.2 84% 4.9%; /* Ringfarbe */
 
         --radius: 0.5rem;
     }
 
     .dark {
-        --background: 222.2 84% 4.9%;
-        --foreground: 210 40% 98%;
+        --background: 222.2 84% 4.9%; /* Dunkles Blau */
+        --foreground: 210 40% 98%; /* Weiß */
 
         --muted: 217.2 32.6% 17.5%;
         --muted-foreground: 215 20.2% 65.1%;
@@ -52,19 +52,19 @@
         --border: 217.2 32.6% 17.5%;
         --input: 217.2 32.6% 17.5%;
 
-        --primary: 146, 72%, 36%; /*210 40% 98%;*/
-        --primary-foreground: 222.2 47.4% 11.2%;
+        --primary: 149, 45%, 42%;
+        --primary-foreground: 222.2 47.4% 11.2%; /* Sehr dunkles Blau */
 
-        --secondary: 217.2 32.6% 17.5%;
+        --secondary: 28, 56%, 42%;
         --secondary-foreground: 210 40% 98%;
 
-        --accent: 217.2 32.6% 17.5%;
+        --accent: 149, 47%, 37%;
         --accent-foreground: 210 40% 98%;
 
-        --destructive: 0 62.8% 30.6%;
+        --destructive: 0 62.8% 30.6%; /* Dunkles Rot */
         --destructive-foreground: 210 40% 98%;
 
-        --ring: 212.7 26.8% 83.9%;
+        --ring: 212.7 26.8% 83.9%; /* Ringfarbe */
     }
 }
 
