--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -6,6 +6,10 @@ main {
 html::-webkit-scrollbar {
     display: none;
 }
+body {
+    padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
+}
+
 
 
 /*@import './base.css';
